@@ -137,11 +137,21 @@
 "TSUN_solo_wins int","'0'"
 "TSUN_solo_losses int","'0'"
 "TSUN_solo_disconnects int","'0'"
+"TSXP_solo_rank int","'0'"
+"TSXP_solo_points int","'0'"
+"TSXP_solo_wins int","'0'"
+"TSXP_solo_losses int","'0'"
+"TSXP_solo_disconnects int","'0'"
 "RAL2_solo_rank int","'0'"
 "RAL2_solo_points int","'0'"
 "RAL2_solo_wins int","'0'"
 "RAL2_solo_losses int","'0'"
 "RAL2_solo_disconnects int","'0'"
+"YURI_solo_rank int","'0'"
+"YURI_solo_points int","'0'"
+"YURI_solo_wins int","'0'"
+"YURI_solo_losses int","'0'"
+"YURI_solo_disconnects int","'0'"
 [${prefix}clan]
 "cid int NOT NULL PRIMARY KEY","'0'"
 "short int","'0'"
