@@ -737,11 +737,10 @@ static int game_report(t_game * game)
     // war3 game reporting is done elsewhere, so we can skip this function
 	    return 0;
 
-    if ((game->clienttag == CLIENTTAG_WCHAT_UINT) || (game->clienttag == CLIENTTAG_TIBSUNXP_UINT)
-     || (game->clienttag == CLIENTTAG_REDALERT_UINT) || (game->clienttag == CLIENTTAG_DUNE2000_UINT)
-     || (game->clienttag == CLIENTTAG_NOX_UINT) || (game->clienttag == CLIENTTAG_NOXQUEST_UINT)
-     || (game->clienttag == CLIENTTAG_RENEGADE_UINT) || (game->clienttag == CLIENTTAG_RENGDFDS_UINT)
-     || (game->clienttag == CLIENTTAG_YURISREV_UINT) || (game->clienttag == CLIENTTAG_EMPERORBD_UINT)
+    if ((game->clienttag == CLIENTTAG_WCHAT_UINT) || (game->clienttag == CLIENTTAG_REDALERT_UINT)
+     || (game->clienttag == CLIENTTAG_DUNE2000_UINT) || (game->clienttag == CLIENTTAG_NOX_UINT)
+     || (game->clienttag == CLIENTTAG_NOXQUEST_UINT) || (game->clienttag == CLIENTTAG_RENEGADE_UINT)
+     || (game->clienttag == CLIENTTAG_RENGDFDS_UINT) || (game->clienttag == CLIENTTAG_EMPERORBD_UINT)
      || (game->clienttag == CLIENTTAG_LOFLORE3_UINT) || (game->clienttag == CLIENTTAG_WWOL_UINT))
      // PELISH: We are not supporting ladders for all WOL clients yet
 	    return 0;
